fix article form layout issues

--- a/engines/adva_cms/public/stylesheets/admin/styles.css
+++ b/engines/adva_cms/public/stylesheets/admin/styles.css
@@ -49,16 +49,19 @@ input.text{
   border:1px solid #CCCCCC;}
 
 fieldset select{
-  width: 98%;
   border:1px solid #CCCCCC;
-  margin: 0 0 25px 0;}
+  /*width: 98%;*/
+  /*margin: 0 0 25px 0;*/
+}
 
 fieldset{
   background:#F6F6F6;
-  margin: 0 0 20px 0; }
+  margin: 0 0 20px 0; 
+	padding-bottom: 20px !important;
+}
 
 fieldset label{
-  padding: 0 0 3px 0;
+  padding: 15px 0 3px 0;
   font-weight:bold;
   position:relative;
   display:block;}
